# Translator

./: .gitignore  CMakeLists.txt  FIX_BUG_AUDIT_NOTES.txt  GUI_REWORK_NOTES.txt  HOTFIX_CONTEXT_MENU_NOTES.txt  README.md  install_app.sh  pdf_word_translator_v7_handoff_prompt.txt  requirements-optional.txt  requirements.txt  uninstall_app.sh  uninstall_previous_v9.sh  update_app.sh
android-client/: README.md  settings.gradle.kts
android-client/app/: build.gradle.kts  proguard-rules.pro
data/: starter_dictionary.csv  starter_dictionary.sqlite
data/packs/: literary_en_ru.csv  literary_ru_en.csv  technical_en_ru.csv  technical_ru_en.csv
docs/: ANDROID_STATUS.md  ARCHITECTURE.md  DEVELOPMENT_LOG.md  DICTIONARY_FORMAT.md  GITHUB_UPDATE_WORKFLOW.md  KNOWN_LIMITATIONS.md  MODULES_INDEX.md  NEURAL_TRANSLATION_ESTIMATE.md  PLUGIN_SYSTEM.md  ROADMAP.md  TESTING.md  TEST_REPORT.md  USER_GUIDE.md  V5_RELEASE_NOTES.md
docs/modules/: app.md  argos_manager.md  config.md  context_extraction.md  context_providers.md  desktop_installer.md  dictionary_builder.md  dictionary_catalog.md  dictionary_composite.md  dictionary_installer.md  dictionary_manager.md  dictionary_service.md  dictionary_sqlite.md  document_fb2.md  document_pdf_pymupdf.md  document_service.md  document_text_base.md  document_txt.md  freedict_importer.md  import_dictionary.md  install_argos_model.md  install_default_dictionaries.md  logging_utils.md  main_window.md  mobile_api.md  models.md  plugin_api.md  plugin_loader.md  settings_dialog.md  settings_store.md  text_normalizer.md  token_splitter.md  translation_workflow.md
docs/test_artifacts/: cmake_install_dictionaries_output.txt  cmake_test_output.txt  install_default_output.txt  pytest_output.txt  smoke_output.txt
scripts/: install_desktop.sh  run_app.sh.in  run_local.sh
src/pdf_word_translator/: __init__.py  app.py  config.py  mobile_api.py  models.py  (+2 more)
tests/: smoke_gui.py  test_android_branch_layout.py  test_argos_manager.py  test_config.py  test_context_extraction.py  test_desktop_manager.py  test_desktop_manager_install_transaction.py  test_dictionary_installer.py  test_dictionary_manager.py  test_dictionary_plugin.py  test_direction_and_tokens.py  test_document_service.py  test_freedict_importer.py  test_libretranslate_and_ui.py  test_mobile_api.py  test_normalizer.py  test_pdf_provider.py  test_real_pdfs.py  test_security_hardening.py  test_settings_store.py  test_text_plugins.py  test_v5_regressions.py  test_v7_regressions.py  test_workflow.py
tools/: build_dictionary.py  desktop_manager.py  import_dictionary.py  install_argos_model.py  install_default_dictionaries.py
(+34 files in other folders)
